--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,3 +130,11 @@
     }
   }
 }
+
+#footer {
+  width:100%;
+  border-top: 1px solid #f1f1f1;
+  padding-top: 30px;
+  position: fixed;
+  bottom: 30px;
+}
