--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 
 #main{
   width:100%;
+  padding-bottom: 200px;
   .container{
     margin-top:100px;
     .main-top{
@@ -134,7 +135,14 @@
 #footer {
   width:100%;
   border-top: 1px solid #f1f1f1;
-  padding-top: 30px;
+  display: flex;
+  height:60px;
   position: fixed;
-  bottom: 30px;
+  align-items: center;
+  bottom: 15px;
+  z-index: 9999;
+  background-color: #fff;
+  .container{
+    p{margin: 0;}
+  }
 }
